Update linkerd/namerd scripts to check Java version (#2185)
# Problem
If we startup Linkerd with a `JAVA_HOME` targeting Java 9, we get this error:

```
sudo env JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk-9.0.4.jdk/Contents/Home linkerd/target/scala-2.12/linkerd-1.5.2-SNAPSHOT-exec linkerd/examples/fs.yaml
```

```
Java HotSpot(TM) 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
Unrecognized VM option 'PrintGCDateStamps'
Error: Could not create the Java Virtual Machine.
Error: A fatal exception has occurred. Program will exit.
```

# Solution
We check the Java version that will be used to startup Linkerd. If the Java version is 9.x, then we will display a warning that GC logging will not be used and skip setting `GC_LOG_OPTION`. This allows Linkerd to startup, but without GC logging. We suggest changing the Java version that `JAVA_HOME` points to, or upgrading to Java SE 10 (similar to [here](https://www.oracle.com/technetwork/java/javase/downloads/jdk9-downloads-3848520.html))

# Validation

```
sudo env JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk-9.0.4.jdk/Contents/Home linkerd/target/scala-2.12/linkerd-1.5.2-SNAPSHOT-exec linkerd/examples/fs.yaml
```

```
GC logging feature not available for Linkerd with Java SE 9. Consider setting JAVA_HOME environment variable to an upgraded SE, or upgrading to JAVA SE 10.
Java HotSpot(TM) 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
[...]
I 1204 10:15:05.239 PST THREAD1: linkerd 1.5.2-SNAPSHOT (rev=67694a18ec328d3c3827ecc636468f991e497992) built at 20181204-101330
W 1204 10:15:05.503 PST THREAD1: failed to create Hotspot JVM interface, using NilJvm instead
I 1204 10:15:05.635 PST THREAD1: Finagle version 18.9.1 (rev=63182f815cb20549ced80c99465879609b05d94b) built at 20180926-144723
I 1204 10:15:07.802 PST THREAD1: Tracer: co