@@ -234,12 +234,12 @@ object LinkerdBuild extends Base {
   val ConfigFileRE = """^(.*)\.yaml$""".r
 
   val execScriptJvmOptions =
-    """|DEFAULT_JVM_OPTIONS="-Djava.net.preferIPv4Stack=true             \
+    """|DEFAULT_JVM_OPTIONS="$DEFAULT_JVM_OPTIONS                        \
+       |   -Djava.net.preferIPv4Stack=true                               \
        |   -Dsun.net.inetaddr.ttl=60                                     \
        |   -Xms${JVM_HEAP_MIN:-32M}                                      \
        |   -Xmx${JVM_HEAP_MAX:-1024M}                                    \
        |   -XX:+AggressiveOpts                                           \
-       |   -XX:+UseConcMarkSweepGC                                       \
        |   -XX:+CMSParallelRemarkEnabled                                 \
        |   -XX:+CMSClassUnloadingEnabled                                 \
        |   -XX:+ScavengeBeforeFullGC                                     \
@@ -360,6 +360,7 @@ object LinkerdBuild extends Base {
          |    jars="$jars:$jar"
          |  done
          |fi
+         |
          |export MALLOC_ARENA_MAX=2
          |
          |# Configure GC logging directory
@@ -371,19 +372,26 @@ object LinkerdBuild extends Base {
          |
          |if [ $? -ne 0 ]; then
          |  echo "GC_LOG must be set to a directory that user [$USER] has write permissions on.\
-         |  Unable to use [$GC_LOG] for GC logging."
+         | Unable to use [$GC_LOG] for GC logging."
          |else
-         |  GC_LOG_OPTION="
-         |   -XX:+PrintGCDetails
-         |   -XX:+PrintGCDateStamps
-         |   -XX:+PrintHeapAtGC
-         |   -XX:+PrintTenuringDistribution
-         |   -XX:+PrintGCApplicationStoppedTime
-         |   -XX:+PrintPromotionFailure
-         |   -Xloggc:${GC_LOG}/gc.log
-         |   -XX:+UseGCLogFileRotation
-         |   -XX:NumberOfGCLogFiles=10
-         |   -XX:GCLogFileSize=10M"
+         |  version=$("${JAVA_HOME:-usr}"/bin/java -version 2>&1 | sed 's/.*version "\([0-9]*\)\..*/\1/; 1q')
+         |
+         |  if [ "$version" -ge 9 ]; then
+         |    GC_LOG_OPTION="-Xlog:gc*,gc+age=trace,gc+heap=debug,gc+promotion=trace,safepoint:file=${GC_LOG}/gc.log::filecount=10,filesize=10000:time"
+         |  else
+         |    GC_LOG_OPTION="
+         |      -XX:+PrintGCDetails
+         |      -XX:+PrintGCDateStamps
+         |      -XX:+PrintHeapAtGC
+         |      -XX:+PrintTenuringDistribution
+         |      -XX:+PrintGCApplicationStoppedTime
+         |      -XX:+PrintPromotionFailure
+         |      -Xloggc:${GC_LOG}/gc.log
+         |      -XX:+UseGCLogFileRotation
+         |      -XX:NumberOfGCLogFiles=10
+         |      -XX:GCLogFileSize=10M"
+         |    DEFAULT_JVM_OPTIONS="-XX:+UseConcMarkSweepGC"
+         |  fi
          |fi
          |
          |""" +
@@ -447,6 +455,7 @@ object LinkerdBuild extends Base {
          |    jars="$jars:$jar"
          |  done
          |fi
+         |
          |export MALLOC_ARENA_MAX=2
          |
          |# Configure GC logging directory
@@ -458,19 +467,26 @@ object LinkerdBuild extends Base {
          |
          |if [ $? -ne 0 ]; then
          |  echo "GC_LOG must be set to a directory that user [$USER] has write permissions on.\
-         |  Unable to use [$GC_LOG] for GC logging."
+         | Unable to use [$GC_LOG] for GC logging."
          |else
-         |  GC_LOG_OPTION="
-         |   -XX:+PrintGCDetails
-         |   -XX:+PrintGCDateStamps
-         |   -XX:+PrintHeapAtGC
-         |   -XX:+PrintTenuringDistribution
-         |   -XX:+PrintGCApplicationStoppedTime
-         |   -XX:+PrintPromotionFailure
-         |   -Xloggc:${GC_LOG}/gc.log
-         |   -XX:+UseGCLogFileRotation
-         |   -XX:NumberOfGCLogFiles=10
-         |   -XX:GCLogFileSize=10M"
+         |  version=$("${JAVA_HOME:-usr}"/bin/java -version 2>&1 | sed 's/.*version "\([0-9]*\)\..*/\1/; 1q')
+         |
+         |  if [ "$version" -ge 9 ]; then
+         |    GC_LOG_OPTION="-Xlog:gc*,gc+age=trace,gc+heap=debug,gc+promotion=trace,safepoint:file=${GC_LOG}/gc.log::filecount=10,filesize=10000:time"
+         |  else
+         |    GC_LOG_OPTION="
+         |      -XX:+PrintGCDetails
+         |      -XX:+PrintGCDateStamps
+         |      -XX:+PrintHeapAtGC
+         |      -XX:+PrintTenuringDistribution
+         |      -XX:+PrintGCApplicationStoppedTime
+         |      -XX:+PrintPromotionFailure
+         |      -Xloggc:${GC_LOG}/gc.log
+         |      -XX:+UseGCLogFileRotation
+         |      -XX:NumberOfGCLogFiles=10
+         |      -XX:GCLogFileSize=10M"
+         |    DEFAULT_JVM_OPTIONS="-XX:+UseConcMarkSweepGC"
+         |  fi
          |fi
          |
          |""" +
@@ -684,6 +700,7 @@ object LinkerdBuild extends Base {
          |    jars="$jars:$jar"
          |  done
          |fi
+         |
          |export MALLOC_ARENA_MAX=2
          |
          |# Configure GC logging directory
@@ -695,19 +712,26 @@ object LinkerdBuild extends Base {
          |
          |if [ $? -ne 0 ]; then
          |  echo "GC_LOG must be set to a directory that user [$USER] has write permissions on.\
-         |  Unable to use [$GC_LOG] for GC logging."
+         | Unable to use [$GC_LOG] for GC logging."
          |else
-         |  GC_LOG_OPTION="
-         |   -XX:+PrintGCDetails
-         |   -XX:+PrintGCDateStamps
-         |   -XX:+PrintHeapAtGC
-         |   -XX:+PrintTenuringDistribution
-         |   -XX:+PrintGCApplicationStoppedTime
-         |   -XX:+PrintPromotionFailure
-         |   -Xloggc:${GC_LOG}/gc.log
-         |   -XX:+UseGCLogFileRotation
-         |   -XX:NumberOfGCLogFiles=10
-         |   -XX:GCLogFileSize=10M"
+         |  version=$("${JAVA_HOME:-usr}"/bin/java -version 2>&1 | sed 's/.*version "\([0-9]*\)\..*/\1/; 1q')
+         |
+         |  if [ "$version" -ge 9 ]; then
+         |    GC_LOG_OPTION="-Xlog:gc*,gc+age=trace,gc+heap=debug,gc+promotion=trace,safepoint:file=${GC_LOG}/gc.log::filecount=10,filesize=10000:time"
+         |  else
+         |    GC_LOG_OPTION="
+         |      -XX:+PrintGCDetails
+         |      -XX:+PrintGCDateStamps
+         |      -XX:+PrintHeapAtGC
+         |      -XX:+PrintTenuringDistribution
+         |      -XX:+PrintGCApplicationStoppedTime
+         |      -XX:+PrintPromotionFailure
+         |      -Xloggc:${GC_LOG}/gc.log
+         |      -XX:+UseGCLogFileRotation
+         |      -XX:NumberOfGCLogFiles=10
+         |      -XX:GCLogFileSize=10M"
+         |    DEFAULT_JVM_OPTIONS="-XX:+UseConcMarkSweepGC"
+         |  fi
          |fi
          |
          |""" +
